--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1.0.193", features = ["derive"] }
+tabled = "0.14.0"
 toml = "0.8.8"
 
 [dev-dependencies]
